--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aquiles-ai/aquiles-rag-js",
-  "version": "1.5.0",
+  "version": "1.5.5",
   "description": "Aquiles-RAG-JS variant made in Fastify to continue the high-performance philosophy of the Python version with FastAPI",
   "main": "src/index.js",
   "files": [
@@ -10,7 +10,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js"
   },
-  "keywords": ["AI", "RAG", "Fastify", "LLMs", "search", "retrieval", "augmented", "generation", "API"],
+  "keywords": [
+    "AI",
+    "RAG",
+    "Fastify",
+    "LLMs",
+    "search",
+    "retrieval",
+    "augmented",
+    "generation",
+    "API"
+  ],
   "author": "Aquiles-ai",
   "license": "MIT",
   "type": "module",
@@ -25,10 +35,18 @@
   "publishConfig": {
     "access": "public"
   },
+  "bin": {
+    "aquiles": "./bin/run.js"
+  },
+  "oclif": {
+    "commands": "./src/commands"
+  },
   "dependencies": {
+    "@aquiles-ai/aquiles-rag-js": "file:aquiles-ai-aquiles-rag-js-1.5.0.tgz",
     "@fastify/middie": "^9.0.3",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "@oclif/core": "^4.5.2",
     "fastify": "^5.4.0",
     "fastify-plugin": "^5.0.1",
     "npq": "^3.10.0",
